[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/dialogue-ink.gd" type="Script" id=2]
[ext_resource path="res://font/VictorianParlor/VictorianParlor-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://font/DefaultFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://font/DefaultFont-Italic.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/paulloz.ink/InkStory.cs" type="Script" id=7]
[ext_resource path="res://dialog/Intro.ink" type="TextFile" id=8]
[ext_resource path="res://font/DefaultFont-Bold.tres" type="DynamicFont" id=9]
[ext_resource path="res://font/DefaultFont-BoldItalic.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/CharacterPortrait.tscn" type="PackedScene" id=11]
[ext_resource path="res://characters/Vidal.tres" type="Resource" id=12]

[sub_resource type="DynamicFont" id=3]
size = 75
outline_size = 1
outline_color = Color( 0.760784, 1, 0.858824, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InkStory" type="Node" parent="Panel"]
script = ExtResource( 7 )
AutoLoadStory = true
InkFile = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Participants" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 970.0
size_flags_vertical = 11
size_flags_stretch_ratio = 5.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ParticipantPortraitTemplate" parent="Panel/VBoxContainer/Participants" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 735.0
margin_top = 170.0
margin_right = 1185.0
margin_bottom = 970.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 450, 800 )
size_flags_horizontal = 0
size_flags_vertical = 8
character = ExtResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 885.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 245
custom_constants/margin_bottom = 10

[node name="SpeechBox" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
margin_left = 245.0
margin_right = 1910.0
margin_bottom = 185.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
custom_constants/separation = -17
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerNameLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/SpeechBox"]
margin_right = 1665.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Undying Vagabond"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer/MarginContainer/SpeechBox"]
margin_top = 59.0
margin_right = 1665.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/MarginContainer/SpeechBox/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 1655.0
margin_bottom = 121.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_italics_font = ExtResource( 10 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 9 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Testing dialogue text [i]italic[/i]"
text = "Testing dialogue text italic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPortrait" parent="Panel" instance=ExtResource( 11 )]
anchor_top = 1.0
anchor_right = 0.0
margin_top = -385.2
margin_right = 227.68
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LocationNameLabel" type="Label" parent="Panel"]
margin_left = 6.66776
margin_top = 6.66778
margin_right = 192.668
margin_bottom = 46.6678
custom_fonts/font = SubResource( 4 )
text = "Location Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputPopup" type="PopupPanel" parent="Panel"]
margin_left = 386.0
margin_top = 303.0
margin_right = 642.0
margin_bottom = 371.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/InputPopup"]
margin_left = 5.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 93.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="Panel/InputPopup/VBoxContainer"]
margin_top = 2.0
margin_right = 236.0
margin_bottom = 23.0
text = "Question here?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerInput" type="LineEdit" parent="Panel/InputPopup/VBoxContainer"]
margin_top = 27.0
margin_right = 236.0
margin_bottom = 58.0
placeholder_text = "Answer here"
